client/cli/derive/tests/ui/substrate_cli_config_wrapper/unknown_field.stderr
error[E0609]: no field `bar` on type `&Wrapper`
 --> $DIR/unknown_field.rs:7:32
  |
7 | #[substrate_cli_config_wrapper(bar)]
  |                                ^^^ unknown field
  |
  = note: available fields are: `foo`
